--- a/home.html
+++ b/home.html
@@ -23,6 +23,8 @@
 						<li><a href="web_design_agency.html">About us</a></li>
 						<li><a href="contact.html">Contact</a></li>
 						<li class="get-started"><a href="project-planner.html">Get Started</a></li>
+						<li class="get-started"><a href="project-planner.html">Get Started</a></li>
+						<li class="get-started"><a href="project-planner.html">Get Started</a></li>
 					</ul>
 				</nav>
 			</div>
