edit logo to brand

--- a/home.html
+++ b/home.html
@@ -14,7 +14,7 @@
 	<div id="wrapper" class="home-page">
 		<header id="header">
 			<div class="header-holder">
-				<strong class="logo"><a href="home.html">Butier Design</a></strong>
+				<strong class="brand"><a href="home.html">Butier Design</a></strong>
 				<nav id="nav">
 					<a href="#" class="opener">open</a>
 					<ul>
