--- a/home.html
+++ b/home.html
@@ -68,7 +68,7 @@
 				</div>
 			</aside>
 			<footer>
-				<p>&copy; Copyright Butier Design 2014. All rights reserved.</p>
+				<p>&copy; SERVER dgsgjdlsjgl.</p>
 			</footer>
 		</div>
 	</div>
