--- a/home.html
+++ b/home.html
@@ -11,7 +11,7 @@
 	<!--[if IE 8]><link rel="stylesheet" type="text/css" href="css/ie.css" media="screen"/><![endif]-->
 </head>
 <body>
-	<div id="wrapper" class="home-page">
+	<div id="wrapper" class="home-page-local">
 		<header id="header">
 			<div class="header-holder">
 				<strong class="brand"><a href="home.html">Butier Design</a></strong>
